改了下样式

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 title: Keep Moving
 home-title: NEVER STOP
 description: 
+header-img: './assets/img/bg.jpg'
 ---
 
 {% include header.html %}
